--- a/html/introduction-to-html/getting-started/index.html
+++ b/html/introduction-to-html/getting-started/index.html
@@ -6,6 +6,6 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <p>I'm creating my own link for the first time at <a href="https://developer .mozilla.org/en-US"><h1>MDN DOCS</h1></a>check it out</p>
   </body>
 </html>
